melhorias de código, testes, coberturas e correções de erros diversas...